tests/valid/extension-only.hcdf
<?xml version="1.0"?>
<hcdf version="1.0" name="extension-test">
  <comp name="board">
    <extension domain="gazebo" version="1.0">
      <gravity>true</gravity>
      <self_collide>false</self_collide>
    </extension>
  </comp>
</hcdf>
